5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1644_2445.log
== SUBMITION (2019-04-16 11:45:28) 
-- CODE:
a = input()
b = float(input())
r = 5/9*(a-32)
if (a == "C"):
	mensagem = r
else (a == "F"):
	mensagem = r
print(round(mensagem,2))
	
	

-- EXECUTION TIME:
0.156985
-- ERROR:
  File "/home/codebench/codes/1644/2445/main.py", line 6
    else (a == "F"):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:45:29) 
-- CODE:
a = input()
b = float(input())
r = 5/9*(a-32)
if (a == "C"):
	mensagem = r
else (a == "F"):
	mensagem = r
print(round(mensagem,2))
	
	

-- ERROR:
File "XXXX", line 6
    else (a == "F"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:45:38) 
-- CODE:
a = input()
b = float(input())
r = 5/9*(a-32)
if (a == "C"):
	mensagem = r
else (a == "F"):
	mensagem = r
print(round(mensagem,2))
	
	

-- ERROR:
File "XXXX", line 6
    else (a == "F"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:45:44) 
-- CODE:
a = input()
b = float(input())
r = 5/9*(a-32)
if (a == "C"):
	mensagem = r
else(a == "F"):
	mensagem = r
print(round(mensagem,2))
	
	

-- ERROR:
File "XXXX", line 6
    else(a == "F"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:45:45) 
-- CODE:
a = input()
b = float(input())
r = 5/9*(a-32)
if (a == "C"):
	mensagem = r
else(a == "F"):
	mensagem = r
print(round(mensagem,2))
	
	

-- EXECUTION TIME:
0.140142
-- ERROR:
  File "/home/codebench/codes/1644/2445/main.py", line 6
    else(a == "F"):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:47:16) 
-- CODE:
a = input()
b = float(input())
r = 5/9*(a-32)
if (a == "C"):
	mensagem = r
else(a == "F"):
	mensagem = r
print(round(mensagem,2))
	
	

-- ERROR:
File "XXXX", line 6
    else(a == "F"):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:47:32) 
-- CODE:
a = input()
b = float(input())
r = 5/9*(a-32)
if (a == "C"):
	mensagem = r
else (a == "F")
	mensagem = r
print(round(mensagem,2))
	
	

-- ERROR:
File "XXXX", line 6
    else (a == "F")
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:47:38) 
-- CODE:
a = input()
b = float(input())
r = 5/9*(a-32)
if (a == "C"):
	mensagem = r
else (a == "F"):
	mensagem = r
print(round(mensagem,2))
	
	

-- ERROR:
File "XXXX", line 6
    else (a == "F"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:47:51) 
-- CODE:
a = input()
b = float(input())
r = 5/9*(a-32)
if (a == "C"):
	mensagem = r
else (a == "F"):
	 mensagem = r
print(round(mensagem,2))
	
	

-- ERROR:
File "XXXX", line 6
    else (a == "F"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:47:59) 
-- CODE:
a = input()
b = float(input())
r = 5/9*(a-32)
if (a == "C"):
	mensagem = r
else (a == "F"):
	 mensagem = r
print(mensagem)
	
	

-- ERROR:
File "XXXX", line 6
    else (a == "F"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:49:17) 
-- CODE:
a = input()
b = float(input())
r = 5/9*(a-32)
if (a == "C"):
	mensagem = r
else (a == "F"):
	 mensagem = r
print(mensagem)
	
	

-- ERROR:
File "XXXX", line 6
    else (a == "F"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:50:17) 
-- CODE:
a = input()
b = float(input())
r = 5/9*(F-32)
if (a == "C"):
	mensagem = r
else (a == "F"):
	mensagem = r
print(round(mensagem,2))
	
	

-- ERROR:
File "XXXX", line 6
    else (a == "F"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:51:36) 
-- CODE:
a = input()
b = float(input())
r = 5/9*(F-32)

if (a == "F"):
	mensagem = r
else (a == "F"):
	mensagem = r
print(round(mensagem,2))
	
	

-- ERROR:
File "XXXX", line 7
    else (a == "F"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:51:45) 
-- CODE:
a = input()
b = float(input())
r = 5/9*(F-32)

if (a == "F"):
	mensagem = r
else (a == "C"):
	mensagem = r
print(round(mensagem,2))
	
	

-- ERROR:
File "XXXX", line 7
    else (a == "C"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:52:17) 
-- CODE:
a = input("C,F")
b = float(input())
r = 5/9*(F-32)


if (a == "F"):
	mensagem = r
else (a == "C"):
	mensagem = r
print(round(mensagem,2))
	
	

-- ERROR:
File "XXXX", line 8
    else (a == "C"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:52:35) 
-- CODE:
a = input("C,F")
b = float(input())
r = 5/9*(F-32)


if (a == "F"):
	mensagem = r
else (a = "C"):
	mensagem = r
print(round(mensagem,2))
	
	

-- ERROR:
File "XXXX", line 8
    else (a = "C"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:52:42) 
-- CODE:
a = input("C,F")
b = float(input())
r = 5/9*(F-32)


if (a = "F"):
	mensagem = r
else (a = "C"):
	mensagem = r
print(round(mensagem,2))
	
	

-- ERROR:
File "XXXX", line 6
    if (a = "F"):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:52:49) 
-- CODE:
a = input("C,F")
b = float(input())
r = 5/9*(F-32)


if (a == "F"):
	mensagem = r
else (a = "C"):
	mensagem = r
print(round(mensagem,2))
	
	

-- ERROR:
File "XXXX", line 8
    else (a = "C"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:52:52) 
-- CODE:
a = input("C,F")
b = float(input())
r = 5/9*(F-32)


if (a == "F"):
	mensagem = r
else (a == "C"):
	mensagem = r
print(round(mensagem,2))
	
	

-- ERROR:
File "XXXX", line 8
    else (a == "C"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:54:49) 
-- CODE:
a = input("C,F")
b = float(input())
r = 5/9*(F-32)
d = 1,8*C +32


if (a == "F"):
	mensagem = r
else (a == "C"):
	mensagem = r
print(round(mensagem,2))
	
	

-- ERROR:
File "XXXX", line 9
    else (a == "C"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:55:04) 
-- CODE:
a = input("C,F")
b = float(input())
r = 5/9*(F-32)
d = 1,8*C +32

if (a == "F"):
	mensagem = r
else:
	mensagem = r
print(round(mensagem,2))
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    r = 5/9*(F-32)
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:55:35) 
-- CODE:
a = input("C,F")
b = float(input())
r = 5/9*(a-32)
d = 1,8*a+32

if (a == "F"):
	mensagem = r
else:
	mensagem = r
print(round(mensagem,2))
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    r = 5/9*(a-32)
TypeError: unsupported operand type(s) for -: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:55:53) 
-- CODE:
a = input("C,F")
b = float(input())
r = 5/9*(b-32)
d = 1,8*b+32

if (a == "F"):
	mensagem = r
else:
	mensagem = r
print(round(mensagem,2))
	
	

-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:56:04) 
-- CODE:
a = input("C,F")
b = float(input())
r = 5/9*(b-32)
d = 1,8*b+32

if (a == "F"):
	mensagem = r
else:
	mensagem = r
print(round(mensagem,2))
	
	

-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:56:13) 
-- CODE:
a = input("C,F")
b = float(input())
r = 5/9*(b-32)
d = 1,8*b+32

if (a == "F"):
	mensagem = r
else:
	mensagem = r
print(round(mensagem,2))
	
	

-- EXECUTION TIME:
0.140485
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:56:18) 
-- CODE:
a = input("C,F")
b = float(input())
r = 5/9*(b-32)
d = 1,8*b+32

if (a == "F"):
	mensagem = r
else:
	mensagem = d
print(round(mensagem,2))
	
	

-- EXECUTION TIME:
0.188042
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2445/main.py", line 10, in <module>
    print(round(mensagem,2))
TypeError: type tuple doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:56:20) 
-- CODE:
a = input("C,F")
b = float(input())
r = 5/9*(b-32)
d = 1,8*b+32

if (a == "F"):
	mensagem = r
else:
	mensagem = d
print(round(mensagem,2))
	
	

-- EXECUTION TIME:
0.16742
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2445/main.py", line 10, in <module>
    print(round(mensagem,2))
TypeError: type tuple doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:56:22) 
-- CODE:
a = input("C,F")
b = float(input())
r = 5/9*(b-32)
d = 1,8*b+32

if (a == "F"):
	mensagem = r
else:
	mensagem = d
print(round(mensagem,2))
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(mensagem,2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:56:44) 
-- CODE:
a = input("C,F")
b = float(input())
r = 5/9*(b-32)
d = 1,8*b+32

if (a == "F"):
	mensagem = r
else:
	mensagem = d
print(round(mensagem,2))
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(mensagem,2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:57:11) 
-- CODE:
a = input("C,F")
b = float(input())
r = 5/9*(b-32)
d = 1,8*b+32

if (a == "F"):
	mensagem = r
else a == "C":
	mensagem = d
print(round(mensagem,2))
	
	

-- EXECUTION TIME:
0.148898
-- ERROR:
  File "/home/codebench/codes/1644/2445/main.py", line 8
    else a == "C":
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:57:11) 
-- CODE:
a = input("C,F")
b = float(input())
r = 5/9*(b-32)
d = 1,8*b+32

if (a == "F"):
	mensagem = r
else a == "C":
	mensagem = d
print(round(mensagem,2))
	
	

-- ERROR:
File "XXXX", line 8
    else a == "C":
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:58:18) 
-- CODE:
a = input("C,F")
b = float(input())
r = 5/9*(b-32)
d = 1,8*b+32

if (a == "F"):
	mensagem = r
else:
	mensagem = d
print(round(mensagem,2))
	
	

-- EXECUTION TIME:
0.203453
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2445/main.py", line 10, in <module>
    print(round(mensagem,2))
TypeError: type tuple doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:58:20) 
-- CODE:
a = input("C,F")
b = float(input())
r = 5/9*(b-32)
d = 1,8*b+32

if (a == "F"):
	mensagem = r
else:
	mensagem = d
print(round(mensagem,2))
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(mensagem,2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:58:55) 
-- CODE:
a = input("C,F")
b = float(input())
r = 5/9*(b-32)
d = 1,8*b+32

if (a == "F"):
	mensagem = r
else:
	mensagem = r
print(round(mensagem,2))
	
	

-- EXECUTION TIME:
0.168711
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:59:25) 
-- CODE:
a = input("C,F")
b = float(input())
r = 5/9*(b-32)
d = 1,8*b+32

if (a == "F"):
	mensagem = r
if (a == "C")
	mensagem = d
print(round(mensagem,2))
	
	

-- EXECUTION TIME:
0.149483
-- ERROR:
  File "/home/codebench/codes/1644/2445/main.py", line 8
    if (a == "C")
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:59:26) 
-- CODE:
a = input("C,F")
b = float(input())
r = 5/9*(b-32)
d = 1,8*b+32

if (a == "F"):
	mensagem = r
if (a == "C")
	mensagem = d
print(round(mensagem,2))
	
	

-- ERROR:
File "XXXX", line 8
    if (a == "C")
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:59:34) 
-- CODE:
a = input("C,F")
b = float(input())
r = 5/9*(b-32)
d = 1,8*b+32

if (a == "F"):
	mensagem = r
if (a == "C"):
	mensagem = d
print(round(mensagem,2))
	
	

-- EXECUTION TIME:
0.166822
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1644/2445/main.py", line 10, in <module>
    print(round(mensagem,2))
TypeError: type tuple doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:59:34) 
-- CODE:
a = input("C,F")
b = float(input())
r = 5/9*(b-32)
d = 1,8*b+32

if (a == "F"):
	mensagem = r
if (a == "C"):
	mensagem = d
print(round(mensagem,2))
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(mensagem,2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 12:00:16) 
-- CODE:
a = input("C,F")
b = float(input())
r = 5/9*(b-32)
d = 1,8*b+32

if (a == "F"):
	mensagem = r
if (a == "C"):
	mensagem = r
print(round(mensagem,2))
	
	

-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 12:00:34) 
-- CODE:
a = input("C,F")
b = float(input())
r = 5/9*(b-32)
d = 1,8*b+32

if (a == "F"):
	mensagem = r
if (a == "C"):
	mensagem = d
print(round(mensagem,2))
	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(mensagem,2))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 12:00:44) 
-- CODE:
a = input("C,F")
b = float(input())
r = 5/9*(b-32)
d = 1.8*b+32

if (a == "F"):
	mensagem = r
if (a == "C"):
	mensagem = d
print(round(mensagem,2))
	
	

-- EXECUTION TIME:
0.119889
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
